# github_topic_scraper

./: README.md  pyproject.toml
sample/: example_program.py
src/github_topic_scraper/: __init__.py  scraper.py  utils.py
