[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-topic-scraper"
version = "0.1.0"
description = "A Python package for scraping GitHub topics and their top repositories"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.1",
    "pandas>=1.2.0",
    "beautifulsoup4>=4.9.3",
]